# timetable

api/: Dockerfile  package-lock.json  package.json  tsconfig.json
api/data/: attributions.txt  blocks.txt  calendar.txt  calendar_dates.txt  routes.txt  stops.txt  trips.txt
api/src/: index.ts  utils.ts  weather.ts  wmo.ts
api/src/timetable/: data.ts  index.ts  realtime.ts  static.ts
app/: Cargo.toml  idf_component.yml
app/src/: channel.rs  configure.rs  constants.rs  lib.rs  main.rs  time.rs
app/src/display/: create.rs  mod.rs  task.rs
app/src/network/: data.rs  mod.rs  parse.rs  request.rs  task.rs
desktop/: package-lock.json
desktop/src-tauri/: tauri.conf.json
font/: .gitignore  Cargo.toml
font/src/: main.rs  template.html
images/: .gitignore  Cargo.toml
images/src/: main.rs
rst/: .gitignore  Cargo.toml  wokwi.toml
rst/src/: channel.rs  configure.rs  display.rs  lib.rs  main.rs
rst/src/display/: create.rs  mod.rs  task.rs
rst/src/network/: mod.rs  request.rs
simulator/: Cargo.toml
simulator/src/: entrypoint.rs  main.rs
ui/: Cargo.toml
ui/src/: draw.rs  lib.rs  payload.rs  ui.rs
ui/src/components/: alpha.rs  block.rs  fonts.rs  icons.rs  image.rs  mod.rs  schedule.rs  temperature.rs  transparent.rs  utils.rs
ui/src/components/blocks/: block.rs  blocks.rs
